# contextmd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/contextmd/: __init__.py  client.py  config.py  session.py
src/contextmd/adapters/: __init__.py  anthropic.py  base.py  litellm.py  openai.py  registry.py
src/contextmd/cli/: __init__.py  main.py
src/contextmd/extraction/: __init__.py  dedup.py  engine.py  prompts.py
src/contextmd/init/: __init__.py  detector.py  templates.py  writers.py
src/contextmd/memory/: __init__.py  bootstrap.py  router.py  types.py
src/contextmd/storage/: __init__.py  base.py  markdown.py  memory.py
tests/: __init__.py  conftest.py  test_adapters.py  test_init.py  test_memory.py  test_storage.py
